--- a/src/styles/includes/_variables.scss
+++ b/src/styles/includes/_variables.scss
@@ -37,6 +37,15 @@ $bold: 900;
 
 /* -------------------------
 *
+* Thirds
+*
+*/
+
+$w1-3: calc(100% / 3);
+$w2-3: calc((100% / 3) * 2);
+
+/* -------------------------
+*
 * Breakpoints
 *
 */
