--- a/src/styles/components/products.scss
+++ b/src/styles/components/products.scss
@@ -3,22 +3,26 @@
 	position: relative;
 
 	&__title {
-		text-align: center;
 		font-weight: $regular;
 		line-height: 0.9;
-		text-transform: uppercase;
 		margin: 0 0 1rem;
+		text-align: center;
+		text-transform: uppercase;
+
+		@include phone {
+			margin: 2rem 0 1rem;
+		}
 
 		.display {
-			text-transform: lowercase;
 			font-size: 2em;
+			text-transform: lowercase;
 		}
 	}
 
 	&__intro {
 		margin: 0 auto;
 		text-align: center;
-		width: 800px;
+		max-width: 800px;
 	}
 
 	&__gallery {
@@ -29,15 +33,33 @@
 		position: relative;
 		width: 800px;
 
+		@include tablet {
+			width: 100%;
+		}
+
 		&:before {
-			content: '';
-			position: absolute;
-			bottom: -5rem;
-			left: -9rem;
 			background: url('../images/strawberries.png') no-repeat center center / contain;
+			bottom: -5rem;
+			content: '';
 			height: 200px;
+			left: -9rem;
+			position: absolute;
 			width: 200px;
 			z-index: 9;
+
+			@include phone {
+				height: 120px;
+				left: 1rem;
+				width: 120px;
+			}
+		}
+
+		.product-img {
+			position: relative;
+
+			.gimage {
+				border-radius: 6px;
+			}
 		}
 	}
 }
