--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -50,7 +50,7 @@
 				height: fit-content;
 
 				@include phone {
-					margin: 0.25rem !important;
+					margin: 0.5rem 0 !important;
 				}
 
 				&__link {
