--- a/src/styles/components/history.scss
+++ b/src/styles/components/history.scss
@@ -42,9 +42,10 @@
 		margin: 3rem auto;
 
 		.about-title {
-			font-size: 2.5rem;
+			font-size: 2rem;
 			font-weight: normal;
 			text-align: center;
+			text-transform: uppercase;
 		}
 
 		.about-text {
