--- a/src/styles/components/products.scss
+++ b/src/styles/components/products.scss
@@ -34,6 +34,7 @@
 		width: 800px;
 
 		@include tablet {
+			grid-template-columns: 1fr;
 			width: 100%;
 		}
 
@@ -57,9 +58,14 @@
 		.product-img {
 			background: $primary-color;
 			position: relative;
+			border-radius: 6px;
+			overflow: hidden;
+
+			@include phone {
+				height: 200px;
+			}
 
 			.gimage {
-				border-radius: 6px;
 				opacity: 0.6;
 				z-index: 0;
 			}
