--- a/src/styles/components/hero.scss
+++ b/src/styles/components/hero.scss
@@ -20,9 +20,12 @@
 			width: 100%;
 			top: 0;
 			left: 0;
+			opacity: 0;
+			transition: all 1s;
 
-			&.fade-left {
-				animation: slide 2s ease-in-out 0s forwards;
+			&.active {
+				animation: slide 3s ease-out 0s forwards;
+				opacity: 1;
 			}
 
 			.gatsby-image-wrapper {
@@ -55,11 +58,9 @@
 	from {
 		transform: scale(1.2);
 		filter: brightness(350%);
-		opacity: 0;
 	}
 	to {
 		transform: scale(1);
 		filter: brightness(100%);
-		opacity: 1;
 	}
 }
