--- a/src/styles/components/history.scss
+++ b/src/styles/components/history.scss
@@ -42,7 +42,8 @@
 		margin: 3rem auto;
 
 		.about-title {
-			font-size: 2rem;
+			font-size: 1.5rem;
+			letter-spacing: 0.1rem;
 			font-weight: normal;
 			text-align: center;
 			text-transform: uppercase;
